5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1635_2443.log
== TEST (2019-04-10 14:42:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume ar = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume ar
else:
	msg = volume esfera - volume ar
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume ar = pi * h**2 * (3*r - h) / 3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:23:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume ar = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume ar
else:
	msg = volume esfera - volume ar
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume ar = pi * h**2 * (3*r - h) / 3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:24:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume ar = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume ar
else:
	msg = volume esfera - volume ar
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.183824
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume ar = pi * h**2 * (3*r - h) / 3
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:24:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume ar = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume ar
else:
	msg = volume esfera - volume ar
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume ar = pi * h**2 * (3*r - h) / 3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:24:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume ar = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume ar
else:
	msg = volume esfera - volume ar
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume ar = pi * h**2 * (3*r - h) / 3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:24:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume ar = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume ar
else:
	msg = volume esfera - volume ar
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume ar = pi * h**2 * (3*r - h) / 3
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:24:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume ar = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume ar
else:
	msg = volume esfera - volume ar
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.191197
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume ar = pi * h**2 * (3*r - h) / 3
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:28:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:28:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:28:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:28:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:28:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.193325
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:28:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.473677
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:28:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.679961
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:28:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.698707
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:28:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.707072
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:28:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.797222
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:29:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.144674
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:29:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- ERROR:
File "XXXX", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:29:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume calota = pi * h**2 * (3*r - h) / 3
volume esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume calota
else:
	msg = volume esfera - volume calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.144972
-- ERROR:
  File "/home/codebench/codes/1635/2443/main.py", line 8
    volume calota = pi * h**2 * (3*r - h) / 3
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 13:29:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume_calota = pi * h**2 * (3*r - h) / 3
volume_esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume_calota
else:
	msg = volume_esfera - volume_calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 13:29:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("Raio do tanque: "))
h = float(input("Altura da coluna: "))
n = int(input("calculo de (1/2): "))
volume_calota = pi * h**2 * (3*r - h) / 3
volume_esfera = 4*pi*r**3 / 3
if (n == 1):
	msg = volume_calota
else:
	msg = volume_esfera - volume_calota
print(round(msg, 4))
	



			 

			 
			 
			 

-- EXECUTION TIME:
0.198172
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
